// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/message/message should have child nodes 1`] = `
<div
  class="message"
>
  <span>
    hello
  </span>
</div>
`;

exports[`components/message/message should match the snapshot 1`] = `
<div
  class="success"
  style="width: 100%;"
>
  <span>
    hello
  </span>
</div>
`;
